# echo-hemodynamics

./: .gitignore  LICENSE  README.md  attention_ablation_cardioAI.py  attention_visualizations_cardioAI.py  dataset_cardioAI.py  main.py  main_cardioAI.py  model_cardioAI.py  pyproject.toml  requirements.txt  test_cardioAI.py  train_cardioAI.py  utils_cardioAI.py  validation_cardioAI.py
echo_hemodynamics/: __init__.py
echo_hemodynamics/ablation/: __init__.py  factory.py  study.py  trainer.py  variants.py
echo_hemodynamics/analysis/: __init__.py  bland_altman.py  confusion_matrix.py  correlation_plots.py  embeddings.py  excel_report.py  heteroscedasticity.py  inference.py  metrics.py  roc_auc.py  scatter_plots.py
echo_hemodynamics/data/: __init__.py  batch_conversion.py  dataset.py  loaders.py  preprocessing.py  splits.py
echo_hemodynamics/figures/: __init__.py  ablation_plots.py  styling.py  training_curves.py
echo_hemodynamics/models/: __init__.py  explainability.py  factory.py  heads.py  progressive_model.py  temporal_attention.py
echo_hemodynamics/runners/: __init__.py  ablation.py  test.py  train.py  validate.py  visualize.py
echo_hemodynamics/training/: __init__.py  checkpoints.py  cross_validation.py  losses.py  trainer.py
echo_hemodynamics/utils/: __init__.py  output.py  palette.py  singleton.py
echo_hemodynamics/visualization/: __init__.py  apex_mask.py  attention_rollout.py  frame_selection.py  integrated_gradients.py  visualizer.py
